# 3D_Viewer_v1.0

./: .gitignore  README.md
3DViewer/: mainwindow.h  mainwindow.ui
Viewer2/: Viewer2.pro  buttons.cpp  buttons.h  buttons.ui  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h
build-3DViewer-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  ui_mainwindow.h
build-3DViewer-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Viewer2-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_widget.cpp
build-Viewer2-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
src/: Makefile  main.c  new_parse.c  translator.c  underfile.h
src/gryffind_dev/: CMakeCache.txt  CMakeLists.txt  Makefile  afinn_translation.c  afinn_translation.h  build.ninja  cmake_install.cmake  dvi.html  main.c  parsing.c  parsing.h  printers.c  supportFunction.c  test_by_vadim.c  user_name_creator.py  username.txt
src/gryffind_dev/.cmake/api/v1/reply/: cache-v2-d4bdd0f835566acbb2ab.json  cmakeFiles-v1-731d7c517e1e3f20b11d.json  codemodel-v2-1d4d591c68ac50bffe3e.json  index-2022-07-24T11-34-26-0466.json  target-gryffind_dev-Debug-6a2d684010cc98063eee.json
src/gryffind_dev/distViewer2.0/src/: Viewer2
src/gryffind_dev/matrix/: Makefile  check.c  determinant.c  s21_calc_complements.c  s21_create_matrix.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult.c  s21_remove_matrix.c  s21_sum_sub.c  s21_transpon.c
(+128 files in other folders)
